--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^16.0.0
   flutter_bloc: ^9.1.1
-  google_maps_flutter: ^2.12.3
   flutter_map: ^8.2.1
   latlong2: ^0.9.1
+  geolocator: ^14.0.2
 
 dev_dependencies:
   flutter_test:
